# YecoLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx  main.tsx
apps/dashboard/src/api/: config.ts  ws.ts
apps/dashboard/src/components/: ChatComposer.tsx  EntropyChart.tsx  ForkBar.tsx  ModelPicker.tsx  OnboardingScreen.tsx  StatusBar.tsx  TokenBadge.tsx  TokenWaterfall.tsx  (+1 more)
benchmark/: BENCHMARK_REPORT.md  run_benchmark.py
cli/: package.json  tsconfig.json
cli/src/: index.test.ts  index.ts
docs/: protocol.md  sdk-python.md  self-hosting.md
examples/: README.md
examples/python-auto/: main.py
examples/python-ollama/: main.py  requirements.txt
examples/python-openai/: main.py  requirements.txt
examples/standalone/: README.md
scripts/: clean.mjs  smoke.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/src/yeco_lens/: __init__.py  auto.py  client.py  protocol.py  trace.py
sdk/python/tests/: test_auto.py  test_client.py  test_protocol.py
server/: package.json
server/src/: config.ts  http.ts  index.ts  inference.ts  integration.test.ts  provider-config.test.ts  provider-config.ts  trace-store.ts  ws.test.ts  ws.ts
server/src/providers/: ollama.test.ts  ollama.ts  openai.test.ts  openai.ts
(+3 files in other folders)
