[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yeco-lens"
version = "1.0.0"
description = "X-ray vision for your LLM. Stream real logprobs to the Yeco-Lens dashboard."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "YecoAI", email = "hello@yeco.ai" }]
requires-python = ">=3.9"
keywords = ["llm", "logprobs", "entropy", "debugger", "ollama", "openai", "observability", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.urls]
Homepage = "https://github.com/YecoAI/yeco-lens"
Repository = "https://github.com/YecoAI/yeco-lens"
Issues = "https://github.com/YecoAI/yeco-lens/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
